--- a/public/guesses_index_mockup.html
+++ b/public/guesses_index_mockup.html
@@ -64,8 +64,8 @@
 </form>
 
 <hr>
-
-<form action="">
+<!-- sends to URL not into a directory!! -->
+<form action = "/show/answer"> 
   <p>
     When you think you know the rule, describe it in words below and then submit your answer. <strong>Make sure you’re right; you won’t get a second chance.</strong>
   </p>
@@ -82,4 +82,4 @@
 
 <hr>
 
-<a href="/clear_guesses">Reset</a>
+<a href="https://www.google.com">Reset</a>
